feat(transforms): handle interrupt errors and handle job cancellation (#15)
Depends on https://app.graphite.com/github/pr/lightning-rod-labs/llm_forecasting/972/feat(transforms)-add-cancel-transform-job-public-endpoint
