# src/lightningrod/_generated/models/create_transform_job_request.py
@@ -35,7 +35,6 @@ class CreateTransformJobRequest:
         max_questions (int | None | Unset):
         max_cost_dollars (float | None | Unset):
         configuration_id (None | str | Unset):
-        use_local_rate_limiter (bool | Unset):  Default: False.
     """
 
     config: (
@@ -54,7 +53,6 @@ class CreateTransformJobRequest:
     max_questions: int | None | Unset = UNSET
     max_cost_dollars: float | None | Unset = UNSET
     configuration_id: None | str | Unset = UNSET
-    use_local_rate_limiter: bool | Unset = False
     additional_properties: dict[str, Any] = _attrs_field(init=False, factory=dict)
 
     def to_dict(self) -> dict[str, Any]:
@@ -114,8 +112,6 @@ class CreateTransformJobRequest:
         else:
             configuration_id = self.configuration_id
 
-        use_local_rate_limiter = self.use_local_rate_limiter
-
         field_dict: dict[str, Any] = {}
         field_dict.update(self.additional_properties)
         field_dict.update(
@@ -131,8 +127,6 @@ class CreateTransformJobRequest:
             field_dict["max_cost_dollars"] = max_cost_dollars
         if configuration_id is not UNSET:
             field_dict["configuration_id"] = configuration_id
-        if use_local_rate_limiter is not UNSET:
-            field_dict["use_local_rate_limiter"] = use_local_rate_limiter
 
         return field_dict
 
@@ -281,15 +275,12 @@ class CreateTransformJobRequest:
 
         configuration_id = _parse_configuration_id(d.pop("configuration_id", UNSET))
 
-        use_local_rate_limiter = d.pop("use_local_rate_limiter", UNSET)
-
         create_transform_job_request = cls(
             config=config,
             input_dataset_id=input_dataset_id,
             max_questions=max_questions,
             max_cost_dollars=max_cost_dollars,
             configuration_id=configuration_id,
-            use_local_rate_limiter=use_local_rate_limiter,
         )
 
         create_transform_job_request.additional_properties = d
